--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex: 1;
   padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid $Secondary-Text-Color;
   justify-content: center;
   align-items: center;
 }
@@ -30,7 +30,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: White;
   text-decoration: none;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .code {
-  background: #fafafa;
+  background: $Accent-Color;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
@@ -80,7 +80,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid $Secondary-Text-Color;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
@@ -89,8 +89,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: $Divider-Color;
+  border-color: $Divider-Color;
 }
 
 .card h2 {
@@ -119,10 +119,10 @@
 @media (prefers-color-scheme: dark) {
   .card,
   .footer {
-    border-color: #222;
+    border-color: $Divider-Color;
   }
   .code {
-    background: #111;
+    background: $Accent-Color;
   }
   .logo img {
     filter: invert(1);
