--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,10 +7,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+// a {
+//   color: inherit;
+//   text-decoration: none;
+// }
 
 * {
   box-sizing: border-box;
@@ -22,6 +22,6 @@ a {
   }
   body {
     color: $Primary-Text-Color;
-    background: $Primary-Color;
+    background: white;
   }
 }
