--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,6 +1,5 @@
 @import "../../styles/colors.scss";
 .card {
-    margin: 1rem;
     padding: 1.5rem;
     text-align: left;
     color: inherit;
@@ -8,7 +7,8 @@
     border: 1px solid $Secondary-Text-Color;
     border-radius: 10px;
     transition: color 0.15s ease, border-color 0.15s ease;
-    max-width: 300px;
+    min-width: 100%;
+    overflow: hidden;
 }
 
 .card:hover,
