fix css globals

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,7 +9,7 @@ $Divider-Color:#BDBDBD;
 
 // Palette URL: http://paletton.com/#uid=73U0u0kpFt4fTD-kYvmtdoivXji */
 
-$color-primary-0: #303F9F;	// Main Primary color */
+$color-primary-0: #dbdef3;	// Main Primary color */
 $color-primary-1: #707BC4;
 $color-primary-2: #4A57AB;
 $color-primary-3: #1B2A85;
