--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,14 @@
 @import "./colors.scss";
 html,
 body {
-  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
+  text-decoration: none;
+  background: linear-gradient(to right, #8300cd, #b800c4);
+  display: flex;
+  margin: auto;
 }
 
 // a {
@@ -12,8 +16,11 @@ body {
 //   text-decoration: none;
 // }
 
-* {
-  box-sizing: border-box;
+main {
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  
 }
 
 @media (prefers-color-scheme: dark) {
