--- a/src/components/NavBar/Button/Button.module.scss
+++ b/src/components/NavBar/Button/Button.module.scss
@@ -1,4 +1,3 @@
-@import "../../../styles/colors.scss";
 .button{
     width: auto;
     padding: 0.7rem;
@@ -11,21 +10,21 @@
 .button:hover,
 .button:focus,
 .button:active {
-    background-color: $color-secondary-1-3;
-    color: $color-secondary-1-1;
+    background-color: #8Bc34A;
+    color: #212121;
     cursor: pointer;
 }
 
 .primary {
-    background-color: $color-primary-0;
-    color: $color-secondary-1-1;
+    background-color: #3f51b5;
+    color: #8Bc34A;
 }
 
 .secondary {
-    border: 1px solid $color-primary-0;
-    color: $color-primary-0;
+    border: 1px solid #8Bc34A;
+    color: #212121;
 }
 
 .normal {
-    color: $Text-Icons-Color
+    color: #BDBDBD
 }
